# src/main/java/com/sgi/credit_back/infrastructure/repository/impl/CreditRepositoryImpl.java
@@ -1,41 +1,29 @@
 package com.sgi.credit_back.infrastructure.repository.impl;
 
 import com.sgi.bank_account_back.infrastructure.dto.*;
+import com.sgi.bank_account_back.infrastructure.dto.TransactionRequest.*;
 import com.sgi.credit_back.domain.model.Credit;
 import com.sgi.credit_back.domain.ports.out.CreditRepository;
+import com.sgi.credit_back.infrastructure.feign.FeignExternalServiceImpl;
 import com.sgi.credit_back.infrastructure.mapper.CreditMapper;
 import com.sgi.credit_back.infrastructure.repository.CreditRepositoryJPA;
-import jakarta.annotation.PostConstruct;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Repository;
-import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.transaction.annotation.Transactional;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Random;
 
-@Repository
 @Slf4j
+@Repository
+@RequiredArgsConstructor
 public class CreditRepositoryImpl implements CreditRepository {
 
-    @Value("${feign.client.config.transaction-service.url}")
-    private String transactionServiceUrl;
-    private final WebClient.Builder webClientBuilder;
+    private final FeignExternalServiceImpl webClient;
     private final CreditRepositoryJPA creditRepository;
-    private WebClient webClient;
-
-    public CreditRepositoryImpl(WebClient.Builder webClientBuilder, CreditRepositoryJPA creditRepository) {
-        this.webClientBuilder = webClientBuilder;
-        this.creditRepository = creditRepository;
-    }
-
-    @PostConstruct
-    public void init() {
-        this.webClient = webClientBuilder.baseUrl(transactionServiceUrl).build();
-    }
 
     @Override
     public Mono<CreditResponse> createCredit(Mono<CreditRequest> credit) {
@@ -80,30 +68,62 @@ public class CreditRepositoryImpl implements CreditRepository {
     }
 
     @Override
-    public Mono<TransactionResponse> withdrawFromCredit(String idCredit, Mono<TransactionRequest> transactionRequest) {
+    public Flux<TransactionResponse> getClientTransactions(String idCredit) {
         return creditRepository.findById(idCredit)
-                .switchIfEmpty(Mono.defer(() -> Mono.error(new Exception("Bank Credit Not Found: " + idCredit))))
-                .flatMap(credit -> transactionRequest
-                        .filter(transaction -> credit.getAmount().compareTo(BigDecimal.valueOf(transaction.getAmount())) >= 0)
-                        .switchIfEmpty(Mono.error(new Exception("Insufficient balance for transaction")))
-                        .flatMap(transaction -> {
-                            BigDecimal updatedBalance = credit.getAmount().subtract(BigDecimal.valueOf(transaction.getAmount()));
+                .switchIfEmpty(Mono.error(new Exception("Bank Credit Not Found: " + idCredit)))
+                .flatMapMany(credit -> webClient.get("/v1/{productId}/transaction",
+                        idCredit,
+                        TransactionResponse.class));
+    }
+
+    @Override
+    @Transactional
+    public Mono<TransactionResponse> makePayment(String idCredit, Mono<PaymentRequest> paymentRequestMono) {
+        TransactionRequest transaction = new TransactionRequest();
+        return creditRepository.findById(idCredit)
+                .switchIfEmpty(Mono.defer(() -> Mono.error(new Exception("Credit product not found: " + idCredit))))
+                .flatMap(credit -> paymentRequestMono
+                        .filter(payment -> payment.getAmount().compareTo(credit.getAmount()) <= 0)
+                        .switchIfEmpty(Mono.error(new Exception("Payment amount must be greater than zero")))
+                        .flatMap(payment -> {
+                            BigDecimal updatedBalance = credit.getAmount().subtract(payment.getAmount());
+                            transaction.setProductId(idCredit);
                             transaction.setClientId(credit.getClientId());
+                            transaction.setType(TypeEnum.PAYMENT);
                             transaction.setBalance(updatedBalance.doubleValue());
+                            transaction.setAmount(payment.getAmount().doubleValue());
                             credit.setAmount(updatedBalance);
                             return creditRepository.save(credit)
-                                    .flatMap(savedAccount -> webClient.post()
-                                            .uri("/v1/transaction")
-                                            .bodyValue(transaction)
-                                            .retrieve()
-                                            .bodyToMono(TransactionResponse.class)
-                                            .doOnNext(response -> log.info("Transaction saved successfully: {}", response))
-                                            .onErrorResume(ex -> {
-                                                log.error("Error during transaction process", ex);
-                                                return Mono.error(new Exception("Error processing transaction", ex));
-                                            }));
+                                    .flatMap(savedAccount -> webClient.post("/v1/transaction",
+                                            transaction,
+                                            TransactionResponse.class));
                         }));
     }
+
+    @Override
+    @Transactional
+    public Mono<TransactionResponse> chargeCreditCard(String idCredit, Mono<ChargeRequest> chargeRequestMono) {
+        TransactionRequest transaction = new TransactionRequest();
+        return creditRepository.findById(idCredit)
+                .switchIfEmpty(Mono.defer(() -> Mono.error(new Exception("Credit product not found: " + idCredit))))
+                .flatMap(credit -> chargeRequestMono
+                        .filter(charge -> !isCreditLimitExceeded(credit, charge.getAmount()))
+                        .switchIfEmpty(Mono.error(new Exception("Insufficient credit available")))
+                        .flatMap(charge -> {
+                            BigDecimal updatedBalance = credit.getAmount().add(charge.getAmount());
+                            transaction.setProductId(idCredit);
+                            transaction.setClientId(credit.getClientId());
+                            transaction.setType(TypeEnum.CHARGE);
+                            transaction.setBalance(updatedBalance.doubleValue());
+                            transaction.setAmount(charge.getAmount().doubleValue());
+                            credit.setAmount(updatedBalance);
+                            return creditRepository.save(credit)
+                                    .flatMap(savedAccount -> webClient.post("/v1/transaction",
+                                            transaction,
+                                            TransactionResponse.class));
+                        }));
+    }
+
 
     @Override
     public Mono<BalanceResponse> getClientBalances(String idCredit) {
@@ -111,20 +131,11 @@ public class CreditRepositoryImpl implements CreditRepository {
                 .map(CreditMapper.INSTANCE::balance);
     }
 
-    @Override
-    public Flux<TransactionResponse> getClientTransactions(String idCredit) {
-        return creditRepository.findById(idCredit)
-                .switchIfEmpty(Mono.error(new Exception("Bank Credit Not Found: " + idCredit)))
-                .flatMapMany(credit -> webClient.get()
-                        .uri("/v1/{accountId}/transaction", credit.getId())
-                        .retrieve()
-                        .bodyToFlux(TransactionResponse.class)
-                        .doOnNext(response -> log.info("Transaction: {}", response))
-                        .onErrorResume(ex -> {
-                            log.error("Error during transaction process", ex);
-                            return Flux.error(new Exception("Error processing list transactions", ex));
-                        }));
+    private boolean isCreditLimitExceeded(Credit credit, BigDecimal requestedAmount) {
+        return requestedAmount.compareTo(credit.getCreditLimit().subtract(credit.getAmount())) > 0;
     }
+
+
 
     private String generateAccountNumber() {
         return String.format("%04d00%012d", new Random().nextInt(10000), new Random().nextLong(1000000000000L));
